--- a/multimidia.html
+++ b/multimidia.html
@@ -21,7 +21,7 @@
             <h2>A revolução do Google está chegando</h2>
         </hgroup>
 
-        q<img id="icone" src="_imagens/multimidia.png"/>
+        <img id="icone" src="_imagens/multimidia.png"/>
 
         <nav id="menu">
             <h1>Menu Principal</h1>
@@ -60,6 +60,7 @@
 
 
         </div>
+        
         </article>
     </section>
 
